--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,9 @@
         }
     },
     "support": {
-        "issues": "https://github.com/orchidsoftware/platform/issues",
-        "source": "https://github.com/orchidsoftware/platform",
-        "docs": "https://orchid.software/en/docs",
-        "email": "bliz48rus@gmail.com"
+        "issues": "https://github.com/derricksmith/haloapi/issues",
+        "source": "https://github.com/derricksmith/haloapi",
+        "email": "derricksmith01@msn.com"
     },
     "authors": [
         {
