Fixes for PSR-4 compliant autoloading.
Removed HTTP debugging output.

PSR-12 formatting.

Added ext-curl dependency in composer.json.

Removed redundant !isset() checks - empty() already covers this.

Imported \Exception into the namespace.

Removed redundant return statements after exceptions are thrown.

Added @throws to docblocks for static analysis.

Extracted distinct API functional groups into traits to reduce size of main API class file.

Added types for static analysis.

Added Laravel service provider, facade & config file.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Derricksmith\\Haloapi\\": "src/"
+            "DerrickSmith\\HaloApi\\": "src/"
         }
     },
     "support": {
@@ -18,5 +18,15 @@
             "name": "Derrick Smith"
         }
     ],
-    "require": {}
+    "require": {
+        "ext-curl": "*",
+        "ext-json": "*"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "DerrickSmith\\HaloApi\\Providers\\HaloServiceProvider"
+            ]
+        }
+    }
 }
